<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <!-- Top Navigation Bar -->
    <LinearLayout
        android:id="@+id/top_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:background="#EEEEEE">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Back_Icon"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            tools:ignore="TouchTargetSizeCheck,VisualLintBounds" />

        <!-- Title -->
        <TextView
            android:id="@+id/page_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/My_Requests"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

        <!-- Notification Button -->
        <ImageButton
            android:id="@+id/NotificationIcon"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Notifications_Icon"
            android:src="@drawable/baseline_add_alert_24"
            tools:ignore="TouchTargetSizeCheck,VisualLintBounds" />

        <!-- Profile Settings Button -->
        <ImageButton
            android:id="@+id/ProfileOptionsIcon"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Profile_Settings_Icon"
            android:src="@drawable/baseline_account_circle_24"
            tools:ignore="TouchTargetSizeCheck,VisualLintBounds" />

    </LinearLayout>

    <!-- RecyclerView to dynamically list book cards -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMyRequests"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/activity_book" />

</LinearLayout>
