<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="10dp"
        android:text="@string/lendbook"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="287dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:hint="@string/EMail"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="Autofill,MissingConstraints" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="287dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="483dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress"
        tools:ignore="Autofill,MissingConstraints" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="287dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#0B0B0B"
        android:paddingEnd="24dp"
        android:text="@string/Sign_In"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:rippleColor="#0F0B0B"
        tools:ignore="RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>
